# bufr2synop

./: 3_80_82_2CompilerIdC_2CMakeCCompilerId_8c.html  3_80_82_2CompilerIdC_2CMakeCCompilerId_8c_source.html  3_83_82_2CompilerIdC_2CMakeCCompilerId_8c.html  3_83_82_2CompilerIdC_2CMakeCCompilerId_8c_source.html  3_85_82_2CompilerIdC_2CMakeCCompilerId_8c.html  3_85_82_2CompilerIdC_2CMakeCCompilerId_8c_source.html  AUTHORS  CMakeCCompilerId_8c.html  CMakeCCompilerId_8c_source.html  CMakeLists.txt  ChangeLog  Doxyfile  Makefile.am  Makefile.cvs  NEWS  README  README.md  annotated.html  apps_2CMakeFiles_2bufrdeco__json_8dir_2bufrdeco__json_8c_8o_8d.html  apps_2CMakeFiles_2bufrdeco__json_8dir_2bufrdeco__json_8c_8o_8d_source.html  apps_2bufrdeco__json_8c.html  apps_2bufrdeco__json_8c__incl.map  apps_2bufrdeco__json_8c__incl.md5  apps_2bufrdeco__json_8c_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  apps_2bufrdeco__json_8c_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  apps_2bufrdeco__json_8c_a46f2cea859a89848802f2cdc5f70dcb3_cgraph.map  apps_2bufrdeco__json_8c_a46f2cea859a89848802f2cdc5f70dcb3_cgraph.md5  apps_2bufrdeco__json_8c_a46f2cea859a89848802f2cdc5f70dcb3_icgraph.map  apps_2bufrdeco__json_8c_a46f2cea859a89848802f2cdc5f70dcb3_icgraph.md5  apps_2bufrdeco__json_8c_a69fc7a4ccb453851eb3b06d6196b3879_icgraph.map  apps_2bufrdeco__json_8c_a69fc7a4ccb453851eb3b06d6196b3879_icgraph.md5  apps_2bufrdeco__json_8c_aa1187b70998f73cdb598833d6afaa30a_icgraph.map  apps_2bufrdeco__json_8c_aa1187b70998f73cdb598833d6afaa30a_icgraph.md5  apps_2bufrdeco__json_8c_source.html  bufr2syn_8h.html  bufr2syn_8h__dep__incl.map  bufr2syn_8h__dep__incl.md5  bufr2syn_8h__incl.map  bufr2syn_8h__incl.md5  bufr2syn_8h_a03d1fde3c9e3d24c15a784540d63d536_icgraph.map  (+3760 more)
examples/: 20141018211119_ISIN03_EGRR_182100.bufr  20150705121512_ISCD01_LIIB_050000.bufr  20160402121749_IUSH01_DRRN_021100.bufr  CMakeLists.txt  Makefile.am
share/: BUFR_13_0_0_TableB_en.csv  BUFR_13_0_0_TableC_en.csv  BUFR_13_0_0_TableD_en.csv  BUFR_14_0_0_TableB_en.csv  BUFR_14_0_0_TableC_en.csv  BUFR_14_0_0_TableD_en.csv  BUFR_15_0_0_TableB_en.csv  BUFR_15_0_0_TableC_en.csv  BUFR_15_0_0_TableD_en.csv  BUFR_16_0_0_TableB_en.csv  BUFR_16_0_0_TableC_en.csv  BUFR_16_0_0_TableD_en.csv  BUFR_17_0_0_TableB_en.csv  BUFR_17_0_0_TableC_en.csv  BUFR_17_0_0_TableD_en.csv  BUFR_18_0_0_CodeFlag_en.csv  BUFR_18_0_0_TableA_en.csv  BUFR_18_0_0_TableB_en.csv  BUFR_18_0_0_TableC_en.csv  BUFR_18_0_0_TableD_en.csv  BUFR_18_1_0_TableB_en.csv  BUFR_18_1_0_TableC_en.csv  BUFR_18_1_0_TableD_en.csv  BUFR_19_0_0_CodeFlag_en.csv  BUFR_19_0_0_TableA_en.csv  BUFR_19_0_0_TableB_en.csv  BUFR_19_0_0_TableC_en.csv  BUFR_19_0_0_TableD_en.csv  BUFR_19_1_1_CodeFlag_en.csv  BUFR_19_1_1_TableB_en.csv  BUFR_19_1_1_TableC_en.csv  BUFR_19_1_1_TableD_en.csv  BUFR_20_0_0_CodeFlag_en.csv  BUFR_20_0_0_TableC_en.csv  BUFR_20_0_0_TableD_en.csv  BUFR_21_0_0_CodeFlag_en.csv  BUFR_21_0_0_TableB_en.csv  BUFR_21_0_0_TableC_en.csv  BUFR_21_0_0_TableD_en.csv  BUFR_22_0_1_CodeFlag_en.csv  (+79 more)
share/common/: C11.csv  C12.csv  C13.csv
share/local/: tableB_LOCAL_101_98_0.csv  tableB_LOCAL_19-1_254_0.csv  tableB_LOCAL_19-1_98_0.csv  tableB_LOCAL_1_254_0.csv  tableB_LOCAL_1_39_0.csv  tableB_LOCAL_1_78_0.csv  tableB_LOCAL_1_78_10.csv  tableB_LOCAL_1_98_0.csv  tableB_LOCAL_2_78_0.csv  tableB_LOCAL_2_98_0.csv  tableB_LOCAL_3_78_0.csv  tableB_LOCAL_3_98_0.csv  tableB_LOCAL_4_78_0.csv  tableB_LOCAL_4_98_0.csv  tableB_LOCAL_5_78_0.csv  tableB_LOCAL_6_78_0.csv  tableB_LOCAL_7_78_0.csv  tableB_LOCAL_8_78_0.csv  tableC_LOCAL_101_98_0.csv  tableC_LOCAL_1_78_10.csv  tableC_LOCAL_1_98_0.csv  tableC_LOCAL_2_98_0.csv  tableC_LOCAL_3_98_0.csv  tableC_LOCAL_4_98_0.csv  tableC_LOCAL_6_78_0.csv  tableC_LOCAL_8_78_3.csv  tableD_LOCAL_19-1_254_0.csv  tableD_LOCAL_1_39_0.csv  tableD_LOCAL_1_78_0.csv  tableD_LOCAL_1_78_10.csv  tableD_LOCAL_1_98_0.csv  tableD_LOCAL_2_78_0.csv  tableD_LOCAL_3_78_0.csv  tableD_LOCAL_3_98_0.csv  tableD_LOCAL_4_78_0.csv  tableD_LOCAL_5_78_0.csv  tableD_LOCAL_6_78_0.csv  tableD_LOCAL_7_78_0.csv  tableD_LOCAL_8_78_3.csv
src/: CMakeLists.txt  Makefile.am  bufr2syn.h  bufr2syn_buoy.c  bufr2syn_csv.c  bufr2syn_env.c  bufr2syn_io.c  bufr2syn_json.c  bufr2syn_mrproper.c  bufr2syn_print.c  bufr2syn_sqparse.c  bufr2syn_synop.c  bufr2syn_tablec.c  bufr2syn_utils.c  bufr2syn_x01.c  bufr2syn_x02.c  bufr2syn_x04.c  bufr2syn_x05.c  bufr2syn_x06.c  bufr2syn_x07.c  bufr2syn_x08.c  bufr2syn_x10.c  bufr2syn_x11.c  bufr2syn_x12.c  bufr2syn_x13.c  bufr2syn_x14.c  bufr2syn_x20.c  bufr2syn_x22.c  bufr2syn_x31.c  bufr2syn_x33.c  bufr2syn_xml.c  bufr2synop.c  bufr2synop.h  bufr_decode.c  metbuoy.h  metsynop.h
src/apps/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  bufr2synop.c  bufr2synop.h  bufr2synop_io.c  bufr_decode.c  bufrdeco_json.c  bufrdeco_test.c  bufrdeco_test2.c  bufrnoaa.c  bufrnoaa.h  bufrnoaa_io.c  bufrnoaa_utils.c  bufrtotac.c  bufrtotac.h  bufrtotac_io.c  build_bufrdeco_tables.c  eccodes_local_to_bufrdeco.c  update_tableD.c
src/bufrdeco/: CMakeLists.txt  Makefile.am  bufrdeco.c  bufrdeco.h  bufrdeco_compressed.c  bufrdeco_csv.c  bufrdeco_data.c  bufrdeco_data_json.c  bufrdeco_ecmwf.c  bufrdeco_f2.c  bufrdeco_json.c  bufrdeco_memory.c  bufrdeco_offsets.c  bufrdeco_print.c  bufrdeco_print_html.c  bufrdeco_read.c  bufrdeco_tableB.c  bufrdeco_tableC.c  bufrdeco_tableD.c  bufrdeco_tableb.c  bufrdeco_tableb_csv.c  bufrdeco_tablec.c  bufrdeco_tablec_csv.c  bufrdeco_tabled.c  bufrdeco_tabled_csv.c  bufrdeco_tree.c  bufrdeco_utils.c  bufrdeco_wmo.c
src/libraries/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  bufr2syn.h  bufr2syn_buoy.c  bufr2syn_climat.c  bufr2syn_csv.c  bufr2syn_env.c  bufr2syn_io.c  bufr2syn_json.c  bufr2syn_mrproper.c  bufr2syn_print.c  bufr2syn_print_temp.c  bufr2syn_sqparse.c  bufr2syn_synop.c  bufr2syn_tablec.c  bufr2syn_temp.c  bufr2syn_utils.c  bufr2syn_x01.c  bufr2syn_x02.c  bufr2syn_x04.c  bufr2syn_x05.c  bufr2syn_x06.c  bufr2syn_x07.c  bufr2syn_x08.c  bufr2syn_x10.c  bufr2syn_x11.c  bufr2syn_x12.c  bufr2syn_x13.c  bufr2syn_x14.c  bufr2syn_x20.c  bufr2syn_x22.c  bufr2syn_x31.c  (+55 more)
(+9 files in other folders)
