dist_pkgdata_DATA = BUFR_18_0_0_CodeFlag_en.csv  BUFR_19_0_0_TableB_en.csv    BUFR_20_0_0_CodeFlag_en.csv  BUFR_21_0_0_TableB_en.csv \
	BUFR_23_0_0_CodeFlag_en.csv  BUFR_24_0_0_TableB_en.csv    BUFR_26_0_0_CodeFlag_en.csv  BUFR_27_0_0_TableB_en.csv \
	BUFR_18_0_0_TableA_en.csv    BUFR_19_0_0_TableD_en.csv    BUFR_20_0_0_TableA_en.csv    BUFR_21_0_0_TableD_en.csv \
	BUFR_23_0_0_TableA_en.csv    BUFR_24_0_0_TableD_en.csv    BUFR_26_0_0_TableA_en.csv    BUFR_27_0_0_TableD_en.csv \
	BUFR_18_0_0_TableB_en.csv    BUFR_19_1_1_CodeFlag_en.csv  BUFR_20_0_0_TableB_en.csv    BUFR_22_0_1_CodeFlag_en.csv \
	BUFR_23_0_0_TableB_en.csv    BUFR_25_0_0_CodeFlag_en.csv  BUFR_26_0_0_TableB_en.csv    BUFR_18_0_0_TableD_en.csv \
	BUFR_19_1_1_TableA_en.csv    BUFR_20_0_0_TableD_en.csv    BUFR_22_0_1_TableA_en.csv    BUFR_23_0_0_TableD_en.csv \
	BUFR_25_0_0_TableA_en.csv    BUFR_26_0_0_TableD_en.csv    BUFR_19_0_0_CodeFlag_en.csv  BUFR_19_1_1_TableB_en.csv \
	BUFR_21_0_0_CodeFlag_en.csv  BUFR_22_0_1_TableB_en.csv    BUFR_24_0_0_CodeFlag_en.csv  BUFR_25_0_0_TableB_en.csv \
	BUFR_27_0_0_CodeFlag_en.csv  BUFR_19_0_0_TableA_en.csv    BUFR_19_1_1_TableD_en.csv    BUFR_21_0_0_TableA_en.csv \
	BUFR_22_0_1_TableD_en.csv    BUFR_24_0_0_TableA_en.csv    BUFR_25_0_0_TableD_en.csv    BUFR_27_0_0_TableA_en.csv
 
