dist_pkgdata_DATA = BUFR_13_0_0_TableB_en.csv  BUFR_15_0_0_TableC_en.csv  BUFR_17_0_0_TableD_en.csv \
	BUFR_19_0_0_TableB_en.csv  BUFR_20_0_0_TableC_en.csv  BUFR_22_0_1_TableD_en.csv  BUFR_25_0_0_TableB_en.csv  BUFR_27_0_0_TableC_en.csv  \
	BUFR_13_0_0_TableC_en.csv  BUFR_15_0_0_TableD_en.csv  BUFR_18_0_0_TableB_en.csv  BUFR_19_0_0_TableC_en.csv  BUFR_20_0_0_TableD_en.csv  \
	BUFR_23_0_0_TableB_en.csv  BUFR_25_0_0_TableC_en.csv  BUFR_27_0_0_TableD_en.csv  BUFR_13_0_0_TableD_en.csv  BUFR_16_0_0_TableB_en.csv  \
	BUFR_18_0_0_TableC_en.csv  BUFR_19_0_0_TableD_en.csv  BUFR_21_0_0_TableB_en.csv  BUFR_23_0_0_TableC_en.csv  BUFR_25_0_0_TableD_en.csv  \
	BUFR_14_0_0_TableB_en.csv  BUFR_16_0_0_TableC_en.csv  BUFR_18_0_0_TableD_en.csv  BUFR_19_1_1_TableB_en.csv  BUFR_21_0_0_TableC_en.csv  \
	BUFR_26_0_0_TableB_en.csv  BUFR_14_0_0_TableC_en.csv  BUFR_16_0_0_TableD_en.csv  BUFR_18_1_0_TableB_en.csv  BUFR_19_1_1_TableC_en.csv  \
	BUFR_21_0_0_TableD_en.csv  BUFR_24_0_0_TableB_en.csv  BUFR_26_0_0_TableC_en.csv  BUFR_14_0_0_TableD_en.csv  BUFR_17_0_0_TableB_en.csv  \
	BUFR_18_1_0_TableC_en.csv  BUFR_19_1_1_TableD_en.csv  BUFR_22_0_1_TableB_en.csv  BUFR_24_0_0_TableC_en.csv  BUFR_26_0_0_TableD_en.csv  \
	BUFR_15_0_0_TableB_en.csv  BUFR_17_0_0_TableC_en.csv  BUFR_18_1_0_TableD_en.csv  BUFR_20_0_0_TableB_en.csv  BUFR_22_0_1_TableC_en.csv  \
	BUFR_24_0_0_TableD_en.csv  BUFR_27_0_0_TableB_en.csv  BUFR_23_0_0_TableD_en.csv \
	BUFR_28_0_0_TableB_en.csv  BUFR_28_0_0_TableC_en.csv  BUFR_28_0_0_TableD_en.csv \
	BUFR_29_0_0_TableB_en.csv  BUFR_29_0_0_TableC_en.csv  BUFR_29_0_0_TableD_en.csv \
	BUFR_30_0_0_TableB_en.csv  BUFR_30_0_0_TableC_en.csv  BUFR_30_0_0_TableD_en.csv \
	BUFR_31_0_0_TableB_en.csv  BUFR_31_0_0_TableC_en.csv  BUFR_31_0_0_TableD_en.csv \
	BUFR_32_0_0_TableB_en.csv  BUFR_32_0_0_TableC_en.csv  BUFR_32_0_0_TableD_en.csv \
	BUFR_33_0_0_TableB_en.csv  BUFR_33_0_0_TableC_en.csv  BUFR_33_0_0_TableD_en.csv \
	BUFR_34_0_0_TableB_en.csv  BUFR_34_0_0_TableC_en.csv  BUFR_34_0_0_TableD_en.csv \
	BUFR_35_0_0_TableB_en.csv  BUFR_35_0_0_TableC_en.csv  BUFR_35_0_0_TableD_en.csv \
	BUFR_36_0_0_TableB_en.csv  BUFR_36_0_0_TableC_en.csv  BUFR_36_0_0_TableD_en.csv \
	BUFR_37_0_0_TableB_en.csv  BUFR_37_0_0_TableC_en.csv  BUFR_37_0_0_TableD_en.csv \
	BUFR_38_1_0_TableB_en.csv  BUFR_38_1_0_TableC_en.csv  BUFR_38_1_0_TableD_en.csv \
	BUFR_39_0_0_TableB_en.csv  BUFR_39_0_0_TableC_en.csv  BUFR_39_0_0_TableD_en.csv \
	BUFR_40_0_0_TableB_en.csv  BUFR_40_0_0_TableC_en.csv  BUFR_40_0_0_TableD_en.csv

