###########################################################################
#   Project: bufr2synop                                                   #
#                                                                         #
#   Copyright (C) 2016-2024 by Guillermo Ballester Valor                  #
#   gbvalor@ogimet.com                                                    #
#                                                                         #
#   GNU General Public License v2 or above                                #
###########################################################################
#
#  CMakeLists.txt for bufr2synop/share
#
#
# CMakeLists for bufr2synop/src
#
add_subdirectory(bufrdeco)
add_subdirectory(libraries)
add_subdirectory(apps)
add_subdirectory(scripts)
